# simple-text-editor

./: .gitignore  CMakeLists.txt  config.hpp.in
src/: main.cpp
src/include/: Editor.hpp  FileHandler.hpp  TextBuffer.hpp  ste.hpp
src/sources/: Editor.cpp  FileHandler.cpp  TextBuffer.cpp  ste.cpp
